--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="#features">Features</a></li>
-						<!--
 						<li><a href="inthemedia.html">In the Media</a></li>
+						<!--
 						<li><a href="support.html">Support</a></li>
 						-->
 						<li><!-- Calendly link widget begin -->
@@ -61,7 +61,7 @@
 							<img class="appstoreqr" src="images/download/appstore_qr.svg" width="80" height="80" alt="scan QR code to open AppStore"></img>
 						  
 						  <div class="tip">
-							<p class="speech-bubble shadow">Point your phone's camera here to try it out!</p>
+							<p class="speech-bubble shadow horz-move">Point your phone's camera here to try it out!</p>
 						  </div>
 						</div>
 
@@ -224,7 +224,7 @@
 				</div>
 				<div class="cta__inner">
 						<h2 class="cta__title">Stay informed</h2>
-						<p class="cta__sub cta__sub--center">Subscribe to our newsletter</p>
+						<p class="cta__sub cta__sub--center no-margin">Subscribe to our newsletter.</p>
 						<!-- Begin Mailchimp Signup Form -->
 
 <div id="mc_embed_signup">
@@ -279,6 +279,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 <script src='js/app.min.js'></script>
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
 
