--- a/privacy/index.html
+++ b/privacy/index.html
@@ -29,7 +29,7 @@
         <p>This Privacy Policy describes how your personal information is handled in Social Contact Journal.</p>
         <h2>We Collect No Personal Information Using Our Applications</h2>
         <p>We do not collect, use, save, or have access to any of your personal data recorded in Social Contact Journal.</p>
-        <p>Individual settings related to Social Contact Journal are not personal and are stored only on your device. You might be asked to provide access to your photo library, but this is only so you can add your photos to Social Contact Journal. We don't process any information at all and have no access to it.</p>
+        <p>Individual settings related to Social Contact Journal are not personal and are stored only on your device. You might be asked to provide access to your phonebook, but this is only so you can add your contacts to Social Contact Journal. We don't process any information at all and have no access to it. You can also decline this request and manually add a contact. You might be asked to provide access to your photo library, but this is only so you can add your photos to Social Contact Journal. We don't process any information at all and have no access to it.</p>
         <h2>App Analytics</h2>
         <p>To help us better understand how people use Social Contact Journal and to continue improving them, we use analytics information provided by Apple and Mixpanel. These services provide generalized data about our apps, such as app usage patterns, transactional, and other anonymized statistics. This data is completely anonymous and cannot personally identify you in any way.</p>
         <h2>Contact Us</h2>
