--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
           
         </div>
         <div class=" row-span-2 place-self-center">
-          <img src="/screenshot.webp" class="w-56 md:w-80 h-full object-contain" />
+          <img src="/screenshot.webp" class="w-56 md:w-80 h-full object-contain" alt="Screenshot of the app Social Contact Journal" />
         </div>
         <div class=" md:order-none order-last place-self-center">
           <div class="bg-white rounded-3xl shadow p-1 flex flex-col items-center">
-            <img src="/appstore-qr.svg" class="w-64 object-contain" />
+            <img src="/appstore-qr.svg" class="w-64 object-contain" alt="QR-code to download Social Contact Journal" />
             <p class="text-sm mb-2 text-center">Point your phone's camera here<br/> to try it out!</p>
           </div>
         </div>
         <div class="">
           <div class="flex md:flex-row flex-col items-center mb-4">
-            <img src="/stars.png"/>
+            <img src="/stars.png" alt="Rating stars: 4.2" />
             <p>4.2, 53 Ratings</p>
           </div>
           <ul class="flex flex-col gap-y-4 items-center md:items-start">
-            <li><p class="text-center md:text-left">"I've been looking for an app like this forever! It is fantastic!"
-              <span class="font-medium">- Rogy</span></li></p>
+            <li class="text-center md:text-left">"I've been looking for an app like this forever! It is fantastic!"
+              <span class="font-medium">- Rogy</span></li>
             <li class="text-center md:text-left">"I really like your app and it appears to be the only one of its kind I can find"
               <span class="font-medium">- Han</span></li>
             <li class="text-center md:text-left">
