Update privacy policy link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
   <footer class="h-8 flex flex-row justify-center gap-x-4 mt-8">
-    <a href="/privacy-policy.html">Privacy Policy</a>
+    <a href="/privacy.html">Privacy Policy</a>
           <a href="/terms.html">Terms</a>
   </footer>
   <script type="application/ld+json">
